<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SetupWizard</string>
    <string name="str_next">Next</string>
    <string name="str_prev">Back</string>
    <string name="str_finish">Finish</string>
    <string name="str_username">Username</string>
    <string name="str_language">Language</string>
    <string name="title_openthos_id">Confirm Openthos ID</string>
    <string name="openthos_id_name">Openthos ID</string>
    <string name="openthos_id_email">Email</string>
    <string name="openthos_id_password">Password</string>
    <string name="str_verify">Verify</string>
    <string name="str_skip">Skip</string>
    <string name="str_register">Register</string>
    <string name="title_username_password">About this device</string>
    <string name="str_computer">Computer Name</string>
    <string name="str_screen_password">Screen Password</string>
    <string name="str_screen_password_confirm">Password confirm</string>
    <string name="title_openthos_finish">Openthos complete all configuration</string>
    <string name="title_open_recoverui">OpenthosID is logged in, do you want to recover datas from backups of cloud services?</string>
    <string name="str_start_use">Start</string>
    <string name="common_title">setting your openthos</string>
    <string name="language_chinese">中文（简体）</string>
    <string name="language_english">English</string>
    <string name="setup_next">Next</string>
    <string name="laptop_1366">Laptop 1366x768/1280x720 Screen</string>
    <string name="laptop_1920">Laptop 1920x1080 Screen</string>
    <string name="laptop_2560">Laptop 2560x1440 or above Screen</string>
    <string name="desktop_1920">Desktop 1920x1080 Display</string>
    <string name="desktop_2560">Desktop 2560x1440 Display</string>
    <string name="desktop_3840">Desktop 4K(3840x2160) Display</string>
    <string name="fhd_tv">FHDTV or Projector</string>
    <string name="uhd_tv">UHDTV or Projector</string>
    <string name="display_setting">Display Device</string>
    <string name="setup_device_setting">Setting Device</string>
    <string name="initialize_progress_title">System initializing for the first time usage...</string>
    <string name="initialize_progress">Installing</string>
    <string name="initialize_finish">Installing finish</string>
    <string name="verify_openthos_title">Verify Openthos ID</string>
    <string name="verify_openthos_summary">If you have had openthos ID,please input related info to bind computer</string>
    <string name="setup_language_title">setting language</string>
    <string name="toast_openthos_id_invalid">openthos Id is not invalid</string>
    <string name="toast_openthos_id_empty">openthos Id is empty</string>
    <string name="toast_openthos_password_wrong">passowrd is wrong</string>
    <string name="toast_openthos_password_empty">password is empty</string>
    <string name="toast_network_not_connect">Not connected to the Internet, please check the network settings</string>
    <string name="toast_openthos_register_cancel">you have canceled</string>
    <string name="toast_openthos_register_password_empty">the password is empty</string>
    <string name="toast_openthos_register_computer_name">ComputerName is empty</string>
    <string name="toast_openthos_register_user_name">UserName is empty</string>
    <string name="toast_openthos_register_password_not_equals"> Two input passwords are not consistent</string>
    <string name="toast_register_successful"> Register successful!</string>
    <string name="toast_register_failed"> Register failed!</string>
    <string name="toast_verify_successful">Verify successful!</string>
    <string name="toast_verify_failed">Verify failed!</string>
    <string name="str_email">Input a valid email address</string>
    <string name="enter_password_again">Enter password again</string>
    <string name="register_openthos_title">Register Openthos ID</string>
    <string name="register_openthos_summary">Openthos ID is your only certificate for you to use the openthos services,please remember you ID and password</string>
    <string name="toast_register_fail">register fail(Mailbox is occupied, mailbox format is wrong)</string>
    <string name="warning_dialog_title">Warning!</string>
    <string name="warning_dialog_message">Are you sure do not set up lock screen password?</string>
    <string name="warning_dialog_ok">OK</string>
    <string name="warning_dialog_cancel">Cancel</string>
    <string name="appstore_download_app">Downloading apps from appstore</string>
    <string name="tips_chinese">是否跳过工厂测试程序</string>
    <string name="tips_chinese_t">是否跳過工廠測試程式</string>
    <string name="tips_english">Whether to skip a program of Factory test</string>
    <string name="tips_korean">공장 테스트 프로그램을 건너뛸 것인지 여부</string>
    <string name="tips_japanese">工場出荷時のテストプログラムをスキップするかどうか</string>
    <string name="tips_yes">YES</string>
    <string name="tips_no">NO</string>
    <string name="multichoice_item_wallpaper">Wallpaper</string>
    <string name="multichoice_item_wifi">Wifi</string>
    <string name="multichoice_item_appdata">Appdata</string>
    <string name="multichoice_item_startupmenu">Startupmenu</string>
    <string name="multichoice_item_browser">Browser</string>
    <string name="multichoice_item_app">App</string>
    <string name="multichoice_button_restore">Restore</string>
    <string name="multichoice_button_cancel">Cancel</string>
    <string name="restore_progress">Restoring</string>
    <string name="init_wallpaper">Init Wallpapers</string>
    <string name="change_url">Change Server Url</string>
</resources>
