<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/firstboot_bg"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="800dp"
        android:layout_height="550dp"
        android:layout_gravity="center"
        android:gravity ="center_vertical"
        android:orientation="vertical">
        <include
            android:id="@+id/title"
            layout="@layout/common_title"/>

        <TextView
            style="@style/common_main_title_style"
            android:text="@string/display_setting"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="393dp"
            android:background="#FFFFFF"
            android:paddingLeft="72dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/tv_laptop_1366"
                android:layout_marginTop="16dp"
                android:text="@string/laptop_1366"
                style="@style/common_display_style" />
            <RadioButton
                android:id="@+id/tv_laptop_1920"
                android:text="@string/laptop_1920"
                style="@style/common_display_style" />
            <RadioButton
                android:id="@+id/tv_laptop_2560"
                android:text="@string/laptop_2560"
                style="@style/common_display_style" />
            <RadioButton
                android:id="@+id/tv_desktop_1920"
                android:text="@string/desktop_1920"
                style="@style/common_display_style" />
            <RadioButton
                android:id="@+id/tv_desktop_2560"
                android:text="@string/desktop_2560"
                style="@style/common_display_style" />
            <RadioButton
                android:id="@+id/tv_deskptop_3840"
                android:text="@string/desktop_3840"
                style="@style/common_display_style" />
            <RadioButton
                android:id="@+id/tv_fhd"
                android:text="@string/fhd_tv"
                style="@style/common_display_style" />
            <RadioButton
                android:id="@+id/tv_uhd"
                android:text="@string/uhd_tv"
                style="@style/common_display_style" />

        </RadioGroup>
         <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#888888"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_prev"
                android:text="@string/str_prev"
                android:textColor="#888888"
                style="@style/common_button_style"
                android:layout_marginLeft="16dp"/>

            <TextView
                android:id="@+id/tv_next"
                android:textColor="#444444"
                android:text="@string/str_next"
                style="@style/common_button_style"
                android:layout_marginRight="16dp"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>
