<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/relativelayout_root"
    android:background="@drawable/firstboot_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="800dp"
        android:layout_height="550dp"
        android:layout_gravity="center"
        android:gravity ="center_vertical"
        android:orientation="vertical">
        <include
           android:id="@+id/title"
           layout="@layout/common_title"/>

        <TextView
            style="@style/common_main_title_style"
            android:text="@string/setup_language_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="394dp"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_chinese"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textColor="#444444"
                android:textSize="14sp"
                android:paddingLeft="72dp"
                android:gravity ="center_vertical"
                android:layout_marginTop="16dp"
                android:text="@string/language_chinese"/>

            <TextView
                android:id="@+id/tv_english"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textColor="#444444"
                android:textSize="14sp"
                android:paddingLeft="72dp"
                android:gravity ="center_vertical"
                android:text="@string/language_english"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#888888"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="right"
            android:background="#FFFFFF" >
            <TextView
                android:id="@+id/tv_next"
                style="@style/common_button_style"
                android:text="@string/setup_next"
                android:textColor="#259b24"
                android:layout_marginRight="16dp"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
